---------------------------------------------------------------------------
Version 5.6.1  [V5-BETA] (rgerhards), 2010-??-??
- bugfix: compile failed with --enable-unlimited-select
  thanks varmojfekoj for the patch
---------------------------------------------------------------------------
Version 5.6.0  [V5-STABLE] (rgerhards), 2010-10-19

This release brings all changes and enhancements of the 5.5.x series
to the v5-stable branch.

- bugfix: a couple of problems that imfile had on some platforms, namely
  Ubuntu (not their fault, but occured there)
- bugfix: imfile utilizes 32 bit to track offset. Most importantly,
  this problem can not experienced on Fedora 64 bit OS (which has
  64 bit long's!)
---------------------------------------------------------------------------
Version 5.5.7  [V5-BETA] (rgerhards), 2010-08-09
- changed omudpspoof default spoof address to simplify typical use case
  thanks to David Lang for suggesting this
- doc bugfix: pmlastmsg doc samples had errors
- bugfix[minor]: pmrfc3164sd had invalid name (resided in rsyslog name 
  space, what should not be the case for a contributed module)
- added omuxsock, which permits to write message to local Unix sockets
  this is the counterpart to imuxsock, enabling fast local forwarding
---------------------------------------------------------------------------
Version 5.5.6  [DEVEL] (rgerhards), 2010-07-21
- added parser modules
  * pmlastmsg, which supports the notoriously malformed "last message
    repeated n times" messages from some syslogd's (namely sysklogd)
  * pmrfc3164sd (contributed), supports RFC5424 structured data in 
    RFC3164 messages [untested]
- added new module type "string generator", used to speed up output
  processing. Expected speedup for (typical) rsyslog processing is
  roughly 5 to 6 percent compared to using string-based templates.
  They may also be used to do more complex formatting with custom
  C code, what provided greater flexibility and probably far higher